objects/ddcAssess__Matched_Record__c.object
<CustomObject>
    <fields>
        <fullName>ddcAssess__Assessment_Summary__c</fullName>
        <label>Assessment Summary</label>
        <referenceTo>ddcAssess__Assessment_Summary__c</referenceTo>
        <relationshipLabel>Matched Records</relationshipLabel>
        <relationshipName>Matched_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Count__c</fullName>
        <inlineHelpText>How many times has this unique ID come up</inlineHelpText>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Dupes__c</fullName>
        <formula>IF((ddcAssess__Count__c - 1) &gt; 0, ddcAssess__Count__c - 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dupes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Matched Record</label>
    <nameField>
        <label>Data.com Record ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matched Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>